--- a/portfolio.html
+++ b/portfolio.html
@@ -20,9 +20,11 @@
 <center><p id="reddit">If you were lazy to click on the link, this is basically it above. I personally think this is something pretty cool I did with HTML as I was learning how to code a website.</p></center>
 
 <center><p id="starwars">Something else that I found pretty cool that I did was me learning how to use the Linux terminal (if you don't know what that is, it's basically the command terminal of the operating system, telling it what to do and such) Below I have included some images from google because we didn't take any screenshots or photos of us doing this, but honeslty it was pretty fun and I know some of the basics commands which is pretty neat if you ask me. (On a side note, by the end of the school year, I'll know HTML, CSS, Linux Commands and hopefully Python and Java. (Pretty good for a 10th grader ngl) </p></center>
+<center><p id="Freedom">As of Feb 28, 2022 I have started to learn python and made this interactive fiction game, fully coded by me on Python! Click the link below to view it. It's my first time, so be easy on me! </p>
+<center><a href="https://replit.com/join/hunvnqcywb-manuelruelas">Here is the link to the Python Interactive Fiction Game!</a></center>
 <center><img src="https://ubuntucommunity.s3.dualstack.us-east-2.amazonaws.com/original/2X/5/5249bad7f0bb536adceb8a9381c7366054546763.png" width="500"alt="image not working!"></center>
 <center><img src="https://www.linuxjournal.com/sites/default/files/styles/max_1300x1300/public/u%5Buid%5D/command-line-syntax-example.png" width="500"alt="image not working!!"></center>
-<center><a class="thirdimage" href="index.html">
+<center><a class="thirdimage" href="home.html">
          <img alt="go home not working!" src="gohome.png"
          width=100" height="50">
        </a>
